--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,25 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+
+
+  <!-- FIREBASE -->
+<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDiEdFDlf2czvIYIGh1ohoxpWOkiOHSiOo",
+    authDomain: "uprate-32e29.firebaseapp.com",
+    databaseURL: "https://uprate-32e29.firebaseio.com",
+    projectId: "uprate-32e29",
+    storageBucket: "",
+    messagingSenderId: "26657143857"
+  };
+  firebase.initializeApp(config);
+</script>
+   <!-- FIREBASE -->
+
 </body>
 </html>
